--- a/src/assets/style/init.scss
+++ b/src/assets/style/init.scss
@@ -44,3 +44,10 @@ body {
 main {
   display: block;
 }
+
+.e-container {
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 4px;
+}
