feature 题库列表开发

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,3 +1,6 @@
+$color-danger: #e94b2c; // 用于警示、标签
+$color-success: #10bf73; // 局部高亮色
+$color-warn: #ffa42d; // 用于色彩搭配以及少数图形色
 // 顶部菜单高度
 $top-menu-height: 50px;
 // 公共间隔
