feature: 题库管理table详情展示开发

--- a/src/assets/style/init.scss
+++ b/src/assets/style/init.scss
@@ -65,10 +65,24 @@ main {
       text-align: left;
     }
     tr > th, tr > td {
-      border: 1px solid #ccc;
+      border: 1px solid #ccc !important;
       line-height: 1.5;
       min-width: 30px;
       padding: 3px 5px;
     }
   }
+}
+
+// 题目 label
+.component-label {
+  width: 44px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  background: #f1f3f8;
+  font-size: 12px;
+  color: #656577;
+  margin-right: 16px;
+  position: relative;
+  top: 10px;
 }
